<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_margin="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      android:text="@string/origin12"
      android:textSize="40sp"
      android:textStyle="bold"
        android:background="@color/indigo"
        android:lineSpacingExtra="5dp"
      android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/origin"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/developments32"
        android:textSize="40sp"
        android:textStyle="bold"
        android:background="@color/indigo"
        android:lineSpacingExtra="5dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/official"
        android:textSize="20sp"
        android:lineSpacingExtra="8dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/grammar23"
        android:textSize="40sp"
        android:textStyle="bold"
        android:background="@color/indigo"
        android:lineSpacingExtra="5dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/grammar"
        android:textSize="20sp"

        android:lineSpacingExtra="8dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/literature23"
        android:textSize="40sp"
        android:textStyle="bold"
        android:background="@color/indigo"
        android:lineSpacingExtra="5dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/literature"
        android:textSize="20sp"

        android:lineSpacingExtra="8dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/garhwali_people_and_media32"
        android:textSize="40sp"
        android:textStyle="bold"
        android:background="@color/indigo"
        android:lineSpacingExtra="5dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/media"
        android:textSize="20sp"
        android:lineSpacingExtra="8dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"/>


  </LinearLayout>
</ScrollView>