<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".SplashScreen">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/walls"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/stoke_light"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/garhwali"
        android:textColor="@color/purple_200"
        android:textSize="55sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/my"
        android:textColor="@color/purple_200"
        android:textSize="45sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/language"
        android:textColor="@color/purple_200"
        android:textSize="45sp"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/feel_proud_of_your_language"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic" />
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo1"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"/>
</LinearLayout>